// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Switch baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-switch t-size-m"
    disabled="false"
    modelvalue="false"
  >
    <span
      class="t-switch__handle"
    >
      <!---->
    </span>
    <div
      class="t-switch__content t-size-m"
    >
      <!---->
    </div>
  </div>
  <div
    class="t-switch t-size-m t-is-checked"
    disabled="false"
    modelvalue="true"
  >
    <span
      class="t-switch__handle"
    >
      <!---->
    </span>
    <div
      class="t-switch__content t-size-m"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`Switch Switch describeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-switch t-size-l t-is-checked"
      disabled="false"
      modelvalue="true"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-l"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-switch t-size-l"
      disabled="false"
      modelvalue="false"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-l"
      >
        <!---->
      </div>
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-switch t-size-l t-is-checked"
      disabled="false"
      modelvalue="true"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-l"
      >
        开
      </div>
    </div>
    <div
      class="t-switch t-size-l"
      disabled="false"
      modelvalue="false"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-l"
      >
        关
      </div>
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-switch t-size-l t-is-checked"
      disabled="false"
      modelvalue="true"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-l"
      >
        <svg
          class="t-icon t-icon-check"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </div>
    </div>
    <div
      class="t-switch t-size-l"
      disabled="false"
      modelvalue="false"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-l"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="t-switch t-size-l t-is-checked"
      disabled="false"
      modelvalue="true"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-l"
      >
        <svg
          class="t-icon t-icon-check"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </div>
    </div>
    <div
      class="t-switch t-size-l"
      disabled="false"
      modelvalue="false"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-l"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch Switch sizeVue demo works fine 1`] = `
<div
  class="switch-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-switch t-size-l t-is-checked"
      disabled="false"
      modelvalue="true"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-l"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-switch t-size-m"
      disabled="false"
      modelvalue="false"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-m"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-switch t-size-s"
      disabled="false"
      modelvalue="false"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-s"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch Switch statusVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-switch t-size-l t-is-checked"
    disabled="false"
    modelvalue="true"
  >
    <span
      class="t-switch__handle"
    >
      <!---->
    </span>
    <div
      class="t-switch__content t-size-l"
    >
      <!---->
    </div>
  </div>
  <div
    class="t-switch t-size-l t-is-loading t-is-checked"
    disabled="false"
    modelvalue="true"
  >
    <span
      class="t-switch__handle t-is-loading"
    >
      <div
        class="t-loading--center t-size-s t-loading"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
        <!---->
      </div>
    </span>
    <div
      class="t-switch__content t-size-l"
    >
      <!---->
    </div>
  </div>
  <div
    class="t-switch t-size-l t-is-disabled"
    disabled="true"
    modelvalue="false"
  >
    <span
      class="t-switch__handle t-is-disabled"
    >
      <!---->
    </span>
    <div
      class="t-switch__content t-size-l t-is-disabled"
    >
      <!---->
    </div>
  </div>
</div>
`;
